filter box is now positied at the bottom on mobile. Fix: 'number of players gigged with' is accurate even with a filtered graph

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
   }
   @media(max-width: 991px) {
     .box_info {
-      bottom: 160px;
+      bottom: 10px;
       top: auto;
     }
   }
